# qgroundcontrol

./: .gitignore  CMakeLists.txt
android/src/org/mavlink/qgroundcontrol/: QGCActivity.java
deploy/docker/: Dockerfile-build-android
src/Android/: AndroidInterface.cc  AndroidInterface.h
src/Comms/: CMakeLists.txt
src/Comms/PqcTls/: MavlinkValidator.cc  MavlinkValidator.h  OpenSSLPQCController.cc  OpenSSLPQCController.h  OpenSSLPQCSettings.cc  OpenSSLPQCSettings.h  PQCTLSConnectionWorker.cc  PQCTLSConnectionWorker.h  UDPRoutingWorker.cc  UDPRoutingWorker.h  pqc_tls_wrapper.c  pqc_tls_wrapper.h
src/GPS/: GPSProvider.cc
src/QmlControls/: QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h
src/UI/AppSettings/: CMakeLists.txt  OpenSSLPQCSettings.qml  SettingsPagesModel.qml
